--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
     <div class="navbar">
-        <img src="path_to_your_image.jpg" alt="MedBot Logo" class="logo">
+        <img src="3fa7901f-abcb-4770-9144-94631847f65f.jpg" alt="MedBot Logo" class="logo">
         <h1>MedBot Meals</h1>
     </div>
     <div class="main-content">
